Closed
Bug 189060
Opened 23 years ago
Closed 21 years ago
other-licenses/libical fails to build on AIX
Categories
(Calendar :: Internal Components, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: pkwarren, Assigned: gray)
Details
Attachments
(1 file)
|
1.40 KB,
patch
|
Details | Diff | Splinter Review |
libical fails to build properly on AIX. In particular, the
other-licenses/libical/src/libical/icalderived* files do not build. I have
downloaded the latest beta of libical from sourceforge (beta4), and that builds
without any problems on AIX.
Comment 1•21 years ago
|
||
mostafah:
Is it possible to update libical in mozilla CVS that AIX can build with
--enable-calendar, please ?
Comment 2•21 years ago
|
||
Do we know where it is failing so I have an idea of which part to update and
make sure whether just updating fixes this problem? Some configure tweaks may be
needed.
| Reporter | ||
Comment 3•21 years ago
|
||
I will get this information for you shortly. I need to rebuild with calendar
support enabled to see where the build breaks again.
| Reporter | ||
Comment 4•21 years ago
|
||
First error:
"/home/pkw/sb/mozilla/trunk/mozilla/other-licenses/libical/src/libical/icalcomponent.c",
line 824.41: 1506-022 (S) "__tm_gmtoff" is not a member of "struct tm".
gmake[3]: *** [icalcomponent.o] Error 1
Second error (after fixing icalcomponent.c error):
"icalderivedparameter.c", line 230.38: 1506-334 (S) Identifier parameter_map has
already been defined on line 58 of "icalderivedparameter.c".
"icalderivedparameter.c", line 257.33: 1506-334 (S) Identifier icalparameter_map
has already been defined on line 132 of "icalderivedparameter.c".
Third error (after fixing icalderivedparameter.c error):
"icalderivedproperty.c", line 251.32: 1506-334 (S) Identifier property_map has
already been defined on line 62 of "icalderivedproperty.c".
"icalderivedproperty.c", line 318.37: 1506-334 (S) Identifier enum_map has
already been defined on line 142 of "icalderivedproperty.c".
Fourth error (after fixing icalderivedproperty.c errors):
"icalderivedvalue.c", line 300.34: 1506-334 (S) Identifier value_map has already
been defined on line 63 of "icalderivedvalue.c".
Fifth error (after fixing icalderivedvalue.c errors):
"/home/pkw/sb/mozilla/trunk/mozilla/other-licenses/libical/src/libical/icalyacc.h",
line 18.9: 1506-213 (S) Macro name TRUE cannot be redefined.
"/home/pkw/sb/mozilla/trunk/mozilla/other-licenses/libical/src/libical/icalyacc.h",
line 19.9: 1506-213 (S) Macro name FALSE cannot be redefined.
Comment 5•21 years ago
|
||
With this change :
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=mozilla%2Fother-licenses%2Flibical&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=03%2F12%2F2004+12%3A00&maxdate=03%2F12%2F2004+14%3A00&cvsroot=%2Fcvsroot
all first four errors should go away.
The fifth error needs more work.
| Reporter | ||
Comment 6•21 years ago
|
||
Everything almost compiles now, with the exception of the two errors below:
1) "icalderivedproperty.c", line 2006.19: 1506-343 (S) Redeclaration of
icalproperty_value_kind_to_kind differs from previous declaration on line 97 of
"/home/pkw/sb/mozilla/trunk/mozilla/other-licenses/libical/src/libical/icalproperty.h".
2)
"/home/pkw/sb/mozilla/trunk/mozilla/other-licenses/libical/src/libical/icalyacc.h",
line 18.9: 1506-213 (S) Macro name TRUE cannot be redefined.
"/home/pkw/sb/mozilla/trunk/mozilla/other-licenses/libical/src/libical/icalyacc.h",
line 19.9: 1506-213 (S) Macro name FALSE cannot be redefined.
| Reporter | ||
Comment 7•21 years ago
|
||
Change the icalproperty_value_kind_to_kind function to match the one in the
derived code. Remove the TRUE/FALSE defines from icalyacc.h as they conflict
with the ones from AIX's sys/types.h file and don't seem to be referenced
anywhere.
Comment 8•21 years ago
|
||
Patch checked in.
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 9•21 years ago
|
||
I am going to go ahead and turn on calendar building for the AIX Tinderbox now.
I will mark this bug as verified once it has built successfully on the Tinderbox.
Updated•19 years ago
|
QA Contact: gurganbl → libical
Updated•19 years ago
|
Component: libical → Internal Components
Comment 10•19 years ago
|
||
The bugspam monkeys have been set free and are feeding on Calendar :: Internal Components. Be afraid for your sanity!
QA Contact: libical → base
You need to log in
before you can comment on or make changes to this bug.
Description
•