Checked in patch for bug 189060: other-licenses/libical fails to build on AIX